@@ -24,6 +24,8 @@ DECL_BIT(DSSlot1AUXSPICNT, DoIRQ, 14);
 DECL_BIT(DSSlot1AUXSPICNT, Enable, 15);
 
 DECL_BITFIELD(DSSlot1ROMCNT, uint32_t);
+DECL_BITS(DSSlot1ROMCNT, Delay, 0, 12);
+DECL_BITS(DSSlot1ROMCNT, Gap, 16, 5);
 DECL_BIT(DSSlot1ROMCNT, WordReady, 23);
 DECL_BITS(DSSlot1ROMCNT, BlockSize, 24, 3);
 DECL_BIT(DSSlot1ROMCNT, TransferRate, 27);
